# trading-stockfish

./: # TRADING STOCKFISH — NEXT‑LEVEL ROADMAP.md  .env.local.example  .gitignore  BRUTAL_TOURNAMENT_DELIVERY.md  BRUTAL_TOURNAMENT_IMPLEMENTATION.md  BRUTAL_TOURNAMENT_MODE.md  BRUTAL_TOURNAMENT_SUMMARY.md  CAUSAL_EVALUATOR.md  CAUSAL_EVALUATOR_COMPLETE.md  CAUSAL_EVAL_INTEGRATION_GUIDE.md  CAUSAL_EVAL_INTEGRATION_SUMMARY.md  CODE_REVIEW_evaluator.md  CODE_REVIEW_live_feed.md  CODE_REVIEW_orders.md  CODE_REVIEW_realtime.md  CODE_REVIEW_state_builder.md  COMPLETION_REPORT.md  CURRENT_ENGINE_FAILURE_MODES.md  DEBUG_CAUSAL_RUN.md  DOCUMENTATION_INDEX.md  END_of_The_Road.txt  EXECUTIONSIMULATOR_V1_DELIVERY.md  EXECUTION_SIMULATOR_INTEGRATION.md  EXECUTION_SIMULATOR_QUICKSTART.md  EXECUTION_SIMULATOR_V1.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_MANIFEST.md  INTEGRATION_COMPLETE.md  LICENSE  LIVE_TRADING_ORCHESTRATOR_SPEC.md  MONITORING_DASHBOARD_GUIDE.md  NEWS_MACRO_ENGINE.md  NEWS_MACRO_ENGINE_COMPLETE.md  NEWS_MACRO_ENGINE_IMPLEMENTATION_SUMMARY.md  NEWS_MACRO_ENGINE_INTEGRATION.md  OFFICIAL_TOURNAMENT_QUICK_REFERENCE.md  OFFICIAL_TOURNAMENT_TEST_PLAN.md  PHASE2_TOURNAMENT_COMPLETE.md  PHASE_2B_HARDENING_COMPLETE.md  (+69 more)
analytics/: data_loader.py  elo_engine.py  experiment_runner.py  feature_drift_detector.py  feature_stats_harness.py  feature_stats_writer.py  news_macro_engine.py  policy_builder.py  regime_statistics.py  replay_day.py  replay_full_system.py  replay_preview.py  replay_regime_integration.py  replay_regime_preview.py  (+7 more)
data/: day1.json  (+7 more)
(+548 files in other folders)
